--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/AlanGF7/our-repo#readme",
   "description": "",
   "dependencies": {
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.6",
     "express": "^5.1.0"
   }
